--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "three": "^0.133.1",
-    "three.meshline": "^1.3.0",
+    "three.meshline": "github:NZhuravlev/THREE.MeshLine#master",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
